update admin panel