@@ -62,7 +62,7 @@ public class AuthenticationFilter implements GlobalFilter, Ordered {
         if (CollectionUtils.isEmpty(authHeader))
             return unauthenticated(exchange.getResponse());
 
-        String token = authHeader.getFirst().replace("Bearer ", "");
+        String token = authHeader.get(0).replace("Bearer ", "");
         log.info("Token: {}", token);
 
         return identityService.introspect(token).flatMap(introspectResponse -> {
