@@ -1,5 +1,16 @@
 package com.devteria.chat.service;
 
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.StringJoiner;
+import java.util.stream.Collectors;
+
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.stereotype.Service;
+
 import com.devteria.chat.dto.request.ConversationRequest;
 import com.devteria.chat.dto.response.ConversationResponse;
 import com.devteria.chat.entity.Conversation;
@@ -7,20 +18,14 @@ import com.devteria.chat.entity.ParticipantInfo;
 import com.devteria.chat.exception.AppException;
 import com.devteria.chat.exception.ErrorCode;
 import com.devteria.chat.mapper.ConversationMapper;
+import com.devteria.chat.repository.ChatMessageRepository;
 import com.devteria.chat.repository.ConversationRepository;
 import com.devteria.chat.repository.httpclient.ProfileClient;
+
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.stereotype.Service;
-
-import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.StringJoiner;
 
 @Slf4j
 @Service
@@ -28,6 +33,7 @@ import java.util.StringJoiner;
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class ConversationService {
     ConversationRepository conversationRepository;
+    ChatMessageRepository chatMessageRepository;
     ProfileClient profileClient;
 
     ConversationMapper conversationMapper;
@@ -43,8 +49,8 @@ public class ConversationService {
         // Fetch user infos
         String userId = SecurityContextHolder.getContext().getAuthentication().getName();
         var userInfoResponse = profileClient.getProfile(userId);
-        var participantInfoResponse = profileClient.getProfile(
-                request.getParticipantIds().getFirst());
+        var participantInfoResponse =
+                profileClient.getProfile(request.getParticipantIds().get(0));
 
         if (Objects.isNull(userInfoResponse) || Objects.isNull(participantInfoResponse)) {
             throw new AppException(ErrorCode.UNCATEGORIZED_EXCEPTION);
@@ -60,7 +66,8 @@ public class ConversationService {
         var sortedIds = userIds.stream().sorted().toList();
         String userIdHash = generateParticipantHash(sortedIds);
 
-        var conversation = conversationRepository.findByParticipantsHash(userIdHash)
+        var conversation = conversationRepository
+                .findByParticipantsHash(userIdHash)
                 .orElseGet(() -> {
                     List<ParticipantInfo> participantInfos = List.of(
                             ParticipantInfo.builder()
@@ -76,8 +83,7 @@ public class ConversationService {
                                     .firstName(participantInfo.getFirstName())
                                     .lastName(participantInfo.getLastName())
                                     .avatar(participantInfo.getAvatar())
-                                    .build()
-                    );
+                                    .build());
 
                     // Build conversation info
                     Conversation newConversation = Conversation.builder()
@@ -104,17 +110,43 @@ public class ConversationService {
     }
 
     private ConversationResponse toConversationResponse(Conversation conversation) {
-        String currentUserId = SecurityContextHolder.getContext().getAuthentication().getName();
+        String currentUserId =
+                SecurityContextHolder.getContext().getAuthentication().getName();
 
         ConversationResponse conversationResponse = conversationMapper.toConversationResponse(conversation);
 
         conversation.getParticipants().stream()
                 .filter(participantInfo -> !participantInfo.getUserId().equals(currentUserId))
-                .findFirst().ifPresent(participantInfo -> {
+                .findFirst()
+                .ifPresent(participantInfo -> {
                     conversationResponse.setConversationName(participantInfo.getUsername());
                     conversationResponse.setConversationAvatar(participantInfo.getAvatar());
                 });
 
         return conversationResponse;
+    }
+
+    @PreAuthorize("hasRole('ADMIN')")
+    public List<ConversationResponse> getAllConversations() {
+        List<Conversation> conversations = conversationRepository.findAll();
+        return conversations.stream()
+                .map(c -> {
+                    ConversationResponse resp = conversationMapper.toConversationResponse(c);
+                    if (c.getParticipants() != null && !c.getParticipants().isEmpty()) {
+                        String names = c.getParticipants().stream()
+                                .map(ParticipantInfo::getUsername)
+                                .collect(Collectors.joining(", "));
+                        resp.setConversationName(names);
+                        resp.setConversationAvatar(c.getParticipants().get(0).getAvatar());
+                    }
+                    return resp;
+                })
+                .toList();
+    }
+
+    @PreAuthorize("hasRole('ADMIN')")
+    public void deleteConversation(String conversationId) {
+        conversationRepository.deleteById(conversationId);
+        chatMessageRepository.deleteAllByConversationId(conversationId);
     }
 }
